--- a/frontend/src/components/history/History.scss
+++ b/frontend/src/components/history/History.scss
@@ -31,11 +31,11 @@
 
     @media screen and (max-width: 900px) {
       width: 90%;
-      height: 30%;
+      height: fit-content;
     }
     @media screen and (max-width: 450px) {
       width: 90%;
-      height: 18%;
+      height: fit-content;
     }
     &:hover {
       box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
