--- a/frontend/src/components/p-history/P_History.scss
+++ b/frontend/src/components/p-history/P_History.scss
@@ -31,11 +31,11 @@
 
     @media screen and (max-width: 900px) {
       width: 90%;
-      height: 30%;
+      height: fit-content;
     }
     @media screen and (max-width: 450px) {
       width: 90%;
-      height: 15%;
+      height: fit-content;
     }
 
     &:hover {
